<resources>
    <string name="app_name">ShoeStore</string>
    <string name="username">Username</string>
    <string name="password">Password</string>s
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="title_welcome">Welcome</string>
    <string name="go_to_instructions">Go to instructions</string>
    <string name="welcome_message">You are welcome in the Shoe Store inventory app</string>
    <string name="instructions">Instructions</string>
    <string name="instructions_desc">Press the shoe list button to see all shoes available</string>
    <string name="shoe_list">Shoe list</string>

    <string name="log_out">Log out</string>
    <string name="detail">Go to detail</string>
    <string name="add_shoe">Add shoe</string>
    <string name="shoe_image_desc">Image of the shoe item</string>
    <string name="incomplete_details">Complete all fields!</string>
    <!-- detail items  -->
    <string name="shoe_name">Name</string>
    <string name="shoe_company">Company</string>
    <string name="shoe_desc">Description</string>
    <string name="shoe_size">Size</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="shoes_list">Shoes list</string>
    <string name="shoe_details">Shoe details</string>
</resources>
